--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,99 +7,114 @@
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
     android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp"
-    android:background="@color/login_bk_color"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="8dp">
+    android:layout_marginEnd="12dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/login_bk_color"
+        android:backgroundTint="@color/login_bk_color"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/mechanicImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/profile_def_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearance="@style/circle" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal">
 
-        <LinearLayout
-            android:id="@+id/ll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@id/callMechanicButton"
-            app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
-            app:layout_constraintTop_toTopOf="parent">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/mechanicImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile_def_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearance="@style/circle" />
 
-            <TextView
-                android:id="@+id/txtMechanicName"
+            <LinearLayout
+                android:id="@+id/ll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="Name"
-                android:textColor="@color/colorPrimaryDark" />
+                android:orientation="vertical"
+                app:layout_constraintEnd_toStartOf="@id/callMechanicButton"
+                app:layout_constraintHorizontal_bias="0.3"
+                app:layout_constraintStart_toEndOf="@id/mechanicImageView"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <!--        <TextView-->
-            <!--            android:id="@+id/txtLocation"-->
-            <!--            android:layout_width="wrap_content"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
-            <!--            android:text="Location"-->
-            <!--            android:textColor="@color/colorPrimaryDark" />-->
+                <TextView
+                    android:id="@+id/txtMechanicName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="Name"
+                    android:textColor="@color/colorPrimaryDark" />
 
-            <TextView
-                android:id="@+id/txtMechanicSpecialization"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="Specialization"
-                android:textColor="@color/colorPrimaryDark" />
-        </LinearLayout>
+                <!--        <TextView-->
+                <!--            android:id="@+id/txtLocation"-->
+                <!--            android:layout_width="wrap_content"-->
+                <!--            android:layout_height="wrap_content"-->
+                <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
+                <!--            android:text="Location"-->
+                <!--            android:textColor="@color/colorPrimaryDark" />-->
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/callMechanicButton"
-            style="@style/circleButton"
-            android:layout_width="49dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:drawableStart="@drawable/ic_call"
-            app:layout_constraintStart_toEndOf="@id/ll"
-            app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
-            app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/txtMechanicSpecialization"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="Specialization"
+                    android:textColor="@color/colorPrimaryDark" />
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/callMechanicButton"
+                style="@style/circleButton"
+                android:layout_width="49dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/ic_call"
+                app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
+                app:layout_constraintStart_toEndOf="@id/ll"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/locationMechanicButton"
-            style="@style/circleButton"
-            android:layout_width="49dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="30dp"
-            android:drawableStart="@drawable/location_icon"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/callMechanicButton"
-            app:layout_constraintTop_toTopOf="parent" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/locationMechanicButton"
+                style="@style/circleButton"
+                android:layout_width="49dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="30dp"
+                android:drawableStart="@drawable/location_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/callMechanicButton"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/rateMechanicButton"
-            style="@style/circleButton"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="10dp"
-            android:drawableLeft="@drawable/star_rate_icon"
-            android:text="5/5"
-            app:layout_constraintStart_toEndOf="@id/ll"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/rateMechanicButton"
+                style="@style/circleButton"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                android:drawableLeft="@drawable/star_rate_icon"
+                android:text="5/5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ll"
+                app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
