--- a/app/src/main/res/layout/activity_manage_parts.xml
+++ b/app/src/main/res/layout/activity_manage_parts.xml
@@ -37,6 +37,8 @@
         android:id="@+id/parts_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:divider="@color/transparent"
+        android:dividerHeight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
