--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -65,6 +65,8 @@
         android:id="@+id/mechanicsListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:divider="@color/transparent"
+        android:dividerHeight="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
