--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -39,7 +39,6 @@
         style="@style/loginButton"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/loginViewsMargin"
-        android:text="@string/send"
-        android:onClick="resetForgetPassword"/>
+        android:text="@string/send" />
 
 </LinearLayout>
